Always show scrollbar to prevent weird shifting on modal open.

--- a/client/stylesheets/global.less
+++ b/client/stylesheets/global.less
@@ -4,6 +4,10 @@
 /* ===============================
     GLOBAL STYLES
    =============================== */
+html {
+     overflow: -moz-scrollbars-vertical;
+     overflow: scroll;
+}
 
 body {
   font-family: 'Proxima Nova', 'Myriad Pro', Arial, Helvetica, sans-serif;
